# beer-bot

./: .gitmodules  Dockerfile  Makefile  README.md  beer.cabal  beer.lock-8.0.2
main/: beer-bot.hs
src/: Beer.hs
src/Beer/: EitherT.hs  Prelude.hs
test/: test.hs
